# kafka_axum

./: Cargo.toml
src/: main.rs
src/auth/: auth.rs  structs.rs
src/config/: kafka_config.rs  logging_config.rs  mod.rs  structs.rs
src/dashboard/: dashboard_handler.rs  mod.rs  structs.rs
