[package]
name = "kafka_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
# 버전 10 이상은 rust_cypto 혹은 aws_lc_rs feature 활성화 필요
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rdkafka = { version = "0.38.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full", "set-status"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
